# ESP32-BinForge

./: CONTRIBUTING.md  LICENSE  README.md
blobs/: BinForge.h  README.md  blob_128b.h  blob_128k.h  blob_16k.h  blob_1k.h  blob_256k.h  blob_2k.h  blob_32k.h  blob_4k.h  blob_512b.h  blob_512k.h  blob_64k.h
examples/Arduino/BlobLicenseSerial_Example/: BlobLicenseSerial_Example.ino
examples/PlatformIO/BlobLicenseSerial_Example/: README.md  platformio.ini
examples/PlatformIO/BlobLicenseSerial_Example/client_blobs/: generate_client_firmware.bat
examples/PlatformIO/BlobLicenseSerial_Example/src/: BinForge.h  blob_32b.h  main.cpp
source/ESP32-BinForge/: ESP32-BinForge.sln
source/ESP32-BinForge-CLI/: CMakeLists.txt
source/ESP32-BinForge-CLI/ESP32-BinForge-CLI/: CMakeLists.txt  ESP32-BinForge-CLI.cpp  ESP32-BinForge-CLI.h
source/ESP32-BinForge/ESP32-BinForge/: ESP32-BinForge.aps  ESP32-BinForge.cpp  ESP32-BinForge.rc  ESP32-BinForge.vcxproj  ESP32-BinForge.vcxproj.filters  esp_app_format.h  framework.h  resource.h
source/blobgen/: CMakeLists.txt
source/blobgen/blobgen/: CMakeLists.txt  blobgen.cpp  blobgen.h
